LPS-185043 Avoid overlap between name and content fields in web content editor

--- a/modules/apps/journal/journal-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/journal/journal-web/src/main/resources/META-INF/resources/css/main.scss
@@ -179,13 +179,19 @@ $productMenuWidth: 320px;
 			}
 		}
 
-		.contextual-sidebar-content {
-			margin-top: $toolbarHeight;
-
+		.article-content-content {
 			@include media-breakpoint-up(lg) {
 				margin-top: $toolbarDesktopHeight;
 			}
 
+			.ddm-form-builder-app {
+				@include media-breakpoint-down(md) {
+					margin-top: $toolbarHeight;
+				}
+			}
+		}
+
+		.contextual-sidebar-content {
 			@include media-breakpoint-down(md) {
 				> .container-fluid {
 					margin: 0 auto;
